--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-.terraform/
-.terraform*
+# .terraform directories
+**/.terraform/**
+
+# idea configs
 .idea/
-terraform.tfstate*
-**/provider.tf
-**/terraform.tf
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
