fixup: scope to contain all files under target

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,8 +1,8 @@
 "@domain/environment":
-  - environments/*
+  - environments/**
 "@domain/layer":
-  - layers/*
+  - layers/**
 "@domain/module":
-  - modules/*
+  - modules/**
 "@type/gitops":
-  - .github/*
+  - .github/**
